package Package;

public interface Item
{
    /**
     * Returns this itemClass' ID
     */
    String getID();

    /**
     * Returns this itemClass' size
     */
    int getSize();

    /**
     * Returns this itemClass' price
     */
    int getPrice();
}
